修改PullToRefreshAndLoad  bulid.gradle

--- a/PullToFrefreshAndLoad/build.gradle
+++ b/PullToFrefreshAndLoad/build.gradle
@@ -21,6 +21,8 @@ android {
     }
 }
 
+apply from: 'bintray.gradle'
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
